<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DoGether</string>
    <string name="login_label">Log in</string>
    <string name="username">Username</string>
    <string name="eventText">Event Text</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="Exercise">Select your exercise</string>
    <string name="type">Select exercise type</string>
    <string name="eventExercise">Enter Exercise</string>
    <string name="eventExerciseType">Enter Exercise Type</string>
    <string name="eventTime">Pick YourTime</string>
    <string name="broadcastEventButton">Save Event</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="not_subscribed_label">Please subscribe to atleast one community to move forward</string>
    <string name="profile">My Profile</string>
    <string name="community">Subscribed community</string>
    <string name="search_nearby">Show nearby communities</string>
    <string name="logout">Logout</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="DoGether">DoGether !</string>
    <string name="networkUnavailable">Network is unavailable. Try later !</string>

    <string-array name="Exercise">
        <item>Upper body workout</item>
        <item>Lower body workout</item>
        <item>Cardio</item>
        <item>Yoga</item>
    </string-array>
    <string-array name="ubw">
        <item>Chest</item>
        <item>Shoulder</item>
        <item>Biceps</item>
        <item>Triceps</item>
        <item>Other</item>
    </string-array>
    <string-array name="lbw">
        <item>Leg press</item>
        <item>Dead lift</item>
        <item>Leg curl</item>
        <item>Barbell Squat</item>
        <item>Other</item>
    </string-array>
    <string-array name="other">
        <item>Other</item>
    </string-array>

    <string name="title_activity_notification_click">NotificationClickActivity</string>
    <string name="tvJoinMe">Join Me !</string>
    <string name="selectedTime">Click here to select time !</string>
    <string name="broadcatBtnText">Save Event</string>
    <string name="btnSelect">Select</string>
    <string name="pickYourTime">Pick your time</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="demo_expand_customtitle1">name is rohan</string>


    <!-- Date Util -->
    <string name="date_util_term_less">less than</string>
    <string name="date_util_term_a">a</string>
    <string name="date_util_term_an">an</string>

    <string name="date_util_unit_second">second</string>
    <string name="date_util_unit_seconds">seconds</string>
    <string name="date_util_unit_minute">minute</string>
    <string name="date_util_unit_minutes">minutes</string>
    <string name="date_util_unit_hour">hour</string>
    <string name="date_util_unit_hours">hours</string>
    <string name="date_util_unit_day">day</string>
    <string name="date_util_unit_days">days</string>
    <string name="date_util_unit_month">month</string>
    <string name="date_util_unit_months">months</string>
    <string name="date_util_unit_year">year</string>
    <string name="date_util_unit_years">years</string>

    <string name="date_util_prefix_lt">less than a</string>
    <string name="date_util_prefix_about">about</string>
    <string name="date_util_prefix_over">over</string>
    <string name="date_util_prefix_almost">almost</string>

    <string name="date_util_suffix">ago</string>

</resources>