<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.apps.DoGether.activities.CreateEventActivity"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exercise"
            android:id="@+id/tvEventExercise"
            android:textSize="20dp"
            android:textIsSelectable="false"
            android:textStyle="bold"
            android:textColor="#6533cc"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp" />
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/spEventExercise"
            android:textSize="20dp"
            android:layout_below="@id/tvEventExercise"
            android:spinnerMode="dropdown"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#DCDCDC" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:id="@+id/tvEventType"
            android:textSize="20dp"
            android:textIsSelectable="true"
            android:textStyle="bold"
            android:textColor="#6533cc"
            android:layout_below="@id/spEventExercise"/>
        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:id="@+id/spEventExerciseType"
            android:textSize="20dp"
            android:layout_below="@+id/tvEventType"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#DCDCDC"
            android:spinnerMode="dropdown"
            android:backgroundTintMode="screen" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEventTime"
        android:textSize="20dp"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:textColor="#6533cc"
        android:text="@string/eventTime"
        android:layout_below="@+id/spEventExerciseType"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/broadcastEventButton"
        android:id="@+id/btnBroadcast"
        android:clickable="false"
        android:textColor="#ffffff"
        android:background="#6533cc"
        android:layout_below="@+id/timePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:timePickerMode="spinner"
        android:clickable="true"
        android:touchscreenBlocksFocus="false"
        android:foregroundGravity="top"
        android:numbersTextColor="#ffffff"
        android:headerBackground="#5298fc"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:amPmTextColor="#6533cc"
        android:layout_below="@+id/tvEventTime"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
